[tool.poetry]
name = "pyturf"
version = "0.6.10"
description = "A modular geospatial engine written in python"
authors = ["Diogo Matos Chaves <diogo_chaves@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rtree = "^1.3.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-env = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
